--- a/BolognaWiFi_Aree_e_Hotspots.ipynb
+++ b/BolognaWiFi_Aree_e_Hotspots.ipynb
@@ -150,7 +150,7 @@
    "source": [
     "# configuring notebook variables\n",
     "place = \"Bologna, Emilia-Romagna, Italia\"\n",
-    "token = 'utuMOzHGIV'\n",
+    "token = 'your_token'\n",
     "aree_url = 'https://rache.labs.it/ftbo/map/api/?report=maps&meta=%7B%22areagroup%22%3A%20%22poi_bo_2%22%2C%20%22mapset%22%3A%20%22ftbo%22%7D&page_id=maps_poi_bo&username=open_data&lomatoken=' + token\n",
     "aree_df = gpd.read_file(aree_url, crs=\"EPSG:4326\")\n",
     "aree_df.set_index(\"id\", inplace = True)\n",
